--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -157,7 +157,7 @@ p {
 |   ✅   | `display`                        | Defines layout behavior (`block`, `flex`, etc.)                  | `display: flex;`      |
 |   ✅   | `position`                       | Controls positioning (`static`, `relative`, `absolute`, `fixed`) | `position: absolute;` |
 |   ✅   | `top`, `left`, `right`, `bottom` | Offsets for positioned elements                                  | `top: 20px;`          |
-|       | `z-index`                        | Stack order (higher = on top)                                    | `z-index: 10;`        |
+|   ✅   | `z-index`                        | Stack order (higher = on top)                                    | `z-index: 10;`        |
 |       | `float`                          | Floats element left or right                                     | `float: left;`        |
 |       | `clear`                          | Prevents float effects                                           | `clear: both;`        |
 
@@ -176,7 +176,7 @@ p {
 | Learn | Property     | Description                      | Example                          |
 | :---: | ------------ | -------------------------------- | -------------------------------- |
 |   ✅   | `transition` | Smooth change of property values | `transition: all 0.3s;`          |
-|       | `animation`  | Runs keyframe animations         | `animation: bounce 2s infinite;` |
+|   ✅   | `animation`  | Runs keyframe animations         | `animation: bounce 2s infinite;` |
 
 ---
 
@@ -1240,3 +1240,450 @@ To use Flexbox, you start by setting a container's display to `flex`:
   flex: 1;
 }
 ```
+
+---
+
+## Grid in CSS
+In CSS, **Grid** (short for **CSS Grid Layout**) is a layout system designed specifically for building two-dimensional layouts on the web. It allows you to design web pages using rows and columns, making complex layouts easier and more efficient to create.
+
+### Key Concepts of CSS Grid:
+
+1. **Grid Container**: The element you apply `display: grid;` to. It becomes the parent of all grid items.
+
+```css
+.container {
+    display: grid;
+}
+```
+
+2. **Grid Items**: The direct children of a grid container.
+
+3. **Grid Tracks**: The rows and columns defined inside the grid.
+
+4. **Grid Lines**: The dividing lines between rows and columns.
+
+---
+
+### Common Properties:
+
+#### 1. **Defining Columns and Rows**
+
+```css
+.container {
+  display: grid;
+  grid-template-columns: 200px 1fr 2fr; /* 3 columns */
+  grid-template-rows: 100px auto;       /* 2 rows */
+}
+```
+
+- `fr`: Fraction of remaining space.
+
+- `auto`: Size based on content.
+
+- `px`, `%`, `em`: Fixed units.
+
+#### 2. **Gap Between Grid Items**
+
+```css
+grid-gap: 10px 15px; /* gap between rows and columns */
+```
+
+Or:
+
+```css
+row-gap: 10px;
+column-gap: 15px;
+```
+
+#### 3. **Placing Items**
+
+```css
+.item1 {
+  grid-column: 1 / 3; /* spans from column line 1 to 3 */
+  grid-row: 1 / 2;
+}
+```
+
+#### 4. **Named Areas**
+
+```css
+.container {
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "sidebar main"
+    "footer footer";
+}
+
+.header { grid-area: header; }
+.sidebar { grid-area: sidebar; }
+.main { grid-area: main; }
+.footer { grid-area: footer; }
+```
+
+---
+
+| **Property**                 | **Applies To** | **Description**                                                         | **Mini Example**                                |
+| ---------------------------- | -------------- | ----------------------------------------------------------------------- | ----------------------------------------------- |
+| `display: grid;`             | Grid container | Turns an element into a grid container.                                 | `.grid { display: grid; }`                      |
+| `grid-template-columns`      | Grid container | Defines the number and size of columns.                                 | `grid-template-columns: 200px 1fr;`             |
+| `grid-template-rows`         | Grid container | Defines the number and size of rows.                                    | `grid-template-rows: 100px auto;`               |
+| `grid-template-areas`        | Grid container | Defines named grid areas for easier layout management.                  | `grid-template-areas: "head head" "side main";` |
+| `grid-area`                  | Grid item      | Assigns an item to a named area or manually spans rows/columns.         | `.item { grid-area: main; }`                    |
+| `grid-column-start` / `-end` | Grid item      | Specifies where a grid item starts and ends in the columns.             | `grid-column-start: 1; grid-column-end: 3;`     |
+| `grid-row-start` / `-end`    | Grid item      | Specifies where a grid item starts and ends in the rows.                | `grid-row-start: 1; grid-row-end: 2;`           |
+| `grid-column`                | Grid item      | Shorthand for `grid-column-start / grid-column-end`.                    | `grid-column: 1 / 3;`                           |
+| `grid-row`                   | Grid item      | Shorthand for `grid-row-start / grid-row-end`.                          | `grid-row: 1 / 2;`                              |
+| `gap`                        | Grid container | Sets the space between rows and columns.                                | `gap: 10px;`                                    |
+| `row-gap` / `column-gap`     | Grid container | Individually sets spacing between rows or columns.                      | `row-gap: 15px;  column-gap: 20 px;`            |
+| `justify-items`              | Grid container | Aligns items **horizontally** inside their grid area.                   | `justify-items: center;`                        |
+| `align-items`                | Grid container | Aligns items **vertically** inside their grid area.                     | `align-items: start;`                           |
+| `justify-content`            | Grid container | Aligns the whole grid **horizontally** within the container.            | `justify-content: space-between;`               |
+| `align-content`              | Grid container | Aligns the whole grid **vertically** within the container.              | `align-content: center;`                        |
+| `place-items`                | Grid container | Shorthand for `align-items` and `justify-items`.                        | `place-items: start end;`                       |
+| `place-content`              | Grid container | Shorthand for `align-content` and `justify-content`.                    | `place-content: center space-around;`           |
+| `grid-auto-flow`             | Grid container | Controls the direction of auto-placed items (`row`, `column`, `dense`). | `grid-auto-flow: column;`                       |
+| `grid-auto-columns`          | Grid container | Sets size of columns added automatically.                               | `grid-auto-columns: 150px;`                     |
+| `grid-auto-rows`             | Grid container | Sets size of rows added automatically.                                  | `grid-auto-rows: 100px;`                        |
+
+---
+
+### Special things
+
+#### 1.  `repeat()` Function
+The `repeat()` function simplifies defining multiple columns or rows with a repeating pattern.
+
+##### 🧠 **Syntax:**
+
+```css
+grid-template-columns: repeat(count, value);
+```
+
+##### ✅ **Example:**
+
+```css
+grid-template-columns: repeat(3, 1fr);
+```
+
+This is the same as:
+
+```css
+grid-template-columns: 1fr 1fr 1fr;
+```
+
+##### 🔁 **With Auto-fill or Auto-fit:**
+
+```css
+grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+```
+
+- `auto-fill`: fills the row with as many columns as possible.
+
+- `minmax()`: sets a min and max size per column.
+
+##### 💡 **Use Case:**
+Useful when you want equal-sized columns or rows and don’t want to manually repeat values.
+
+#### 2.  `span` Keyword
+
+The `span` keyword is used in `grid-column` or `grid-row` to tell an item to stretch across multiple rows or columns.
+
+##### 🧠 **Syntax:**
+
+```css
+grid-column: span <number>;
+grid-row: span <number>;
+```
+
+##### ✅ **Example:**
+
+```css
+.item {
+  grid-column: span 2;
+}
+```
+
+This makes the item span across **2 columns**.
+
+---
+
+### When to Use CSS Grid:
+
+- For **two-dimensional layouts** (both rows and columns).
+
+- When building **complex page layouts**, like dashboards or article templates.
+
+- When you want **cleaner code** compared to floats or flex-box hacks.
+
+---
+
+## Animation in CSS
+CSS animations allow you to animate HTML elements **without JavaScript** by smoothly changing property values over time.
+
+### Ways to Animate in CSS
+
+ 1. **Transitions** – simple changes between two states.
+
+ 2. **Keyframe Animations** – more complex, multi-step animations.
+
+### CSS **Keyframe Animation**
+
+```html
+<div class="ball"></div>
+
+<style>
+.ball {
+  width: 50px;
+  height: 50px;
+  background: orange;
+  border-radius: 50%;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-100px); }
+  100% { transform: translateY(0); }
+}
+</style>
+```
+
+#### Key Properties:
+
+|Property|Description|
+|---|---|
+|`@keyframes`|Defines steps of the animation|
+|`animation-name`|Name of the keyframes block|
+|`animation-duration`|Time for one animation cycle|
+|`animation-iteration-count`|How many times to repeat (`infinite` or number)|
+|`animation-direction`|Normal, reverse, or alternate|
+|`animation-timing-function`|Speed curve (`ease-in-out`, `linear`, etc.)|
+|`animation-delay`|Wait before animation starts|
+|`animation-fill-mode`|Keeps styles after animation (`forwards`, etc.)|
+|`animation`|Shorthand: `name duration timing count` etc.|
+
+#### Animation Shorthand
+
+```css
+animation: bounce 2s ease-in-out infinite;
+```
+
+Same as:
+
+```css
+animation-name: bounce;
+animation-duration: 2s;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+```
+
+#### `%` in Animation
+In CSS animations, the **`%` values** inside a `@keyframes` block represent specific **points in time** over the duration of the animation.
+
+When you define a `@keyframes` animation, you're creating **steps** at different points in time from the **start (0%)** to the **end (100%)**.
+
+| % Value | Meaning         |
+| ------- | --------------- |
+| `0%`    | Animation start |
+| `50%`   | Halfway through |
+| `100%`  | Animation end   |
+
+##### ✅ **Example: Color Change Animation**
+
+```css
+@keyframes colorChange {
+  0%   { background-color: red; }
+  50%  { background-color: yellow; }
+  100% { background-color: green; }
+}
+
+.box {
+  animation: colorChange 3s infinite;
+}
+```
+
+- At **0%**, the box is red.
+
+- At **1.5s** (50% of 3s), it's yellow.
+
+- At **3s** (100%), it's green.
+
+- Then it loops again if `infinite` is set.
+
+##### 🧠 **Tip:**
+You can use as **many % steps as needed**, not just 0/50/100:
+
+```css
+@keyframes complex {
+  0%   { transform: scale(1); }
+  25%  { transform: scale(1.5); }
+  50%  { transform: rotate(180deg); }
+  75%  { transform: scale(0.5); }
+  100% { transform: scale(1); }
+}
+```
+
+---
+## Media Queries in CSS
+Media queries in CSS are a way to apply styles **based on the device’s characteristics**, like screen width, height, orientation, or resolution. They are essential for **responsive design**, allowing your layout to adapt across mobile, tablet, and desktop screens.
+
+
+### 🧠 Basic Syntax
+
+```css
+@media (condition) {
+  /* CSS rules go here */
+}
+```
+
+### ✅ Example:
+
+```css
+/* Base styles */
+body {
+  font-size: 16px;
+}
+
+/* Apply only on screens 600px or smaller */
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+}
+```
+
+### 📋 Common Media Features
+
+|Feature|Description|Example|
+|---|---|---|
+|`max-width`|Screen width is **less than or equal** to|`@media (max-width: 768px)`|
+|`min-width`|Screen width is **greater than or equal** to|`@media (min-width: 1024px)`|
+|`orientation`|`portrait` or `landscape`|`@media (orientation: portrait)`|
+|`max-height`|Max height of the viewport|`@media (max-height: 500px)`|
+|`min-height`|Min height of the viewport|`@media (min-height: 800px)`|
+|`resolution`|Screen resolution (DPI or dppx)|`@media (min-resolution: 2dppx)`|
+
+### 📐 Common Use Cases
+
+#### 🔹 Mobile First Design
+
+```css
+/* Default styles for mobile */
+.container {
+  flex-direction: column;
+}
+
+/* For tablets and larger */
+@media (min-width: 768px) {
+  .container {
+    flex-direction: row;
+  }
+}
+```
+
+#### 🔹 Hide Navigation on Small Screens
+
+```css
+@media (max-width: 600px) {
+  .sidebar {
+    display: none;
+  }
+}
+```
+
+### 🧪 Combining Media Features
+
+```css
+@media (min-width: 600px) and (max-width: 1024px) {
+  body {
+    background: lightblue;
+  }
+}
+```
+
+---
+
+## z-index in CSS
+`z-index` controls the **stacking order** of elements along the **z-axis** (front-to-back) — think of layers in Photoshop or PowerPoint. It determines which element appears **on top** when elements overlap.
+
+### ✅ Basic Rules
+
+1. **Higher `z-index` = closer to the viewer** (on top).
+
+2. It only works on elements with **positioning**:
+    
+    - `position: relative;`
+    
+    - `position: absolute;`
+    
+    - `position: fixed;`
+    
+    - `position: sticky;`
+
+### 🧪 Example:
+
+```html
+<div class="box behind"></div>
+<div class="box front"></div>
+
+<style>
+.box {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+}
+
+.behind {
+  background: red;
+  top: 20px;
+  left: 20px;
+  z-index: 1;
+}
+
+.front {
+  background: blue;
+  top: 40px;
+  left: 40px;
+  z-index: 2;
+}
+</style>
+```
+
+🔵 The blue box will appear **on top** of the red one because `2 > 1`.
+
+### 🔁 Default Stacking Without `z-index`
+
+Even without setting `z-index`, elements still stack by **source order**:
+
+- Later elements in the HTML come on top.
+
+### 🎯 Common Use Cases
+
+- Dropdown menus above everything:
+
+```css
+.dropdown {
+    position: absolute;
+    z-index: 100;
+}
+```
+
+- Modal popups:
+
+```css
+.modal {
+    position: fixed;
+    z-index: 9999;
+}
+```
+
+- Sending background images to the back:
+
+```css
+.background {
+    position: absolute;
+    z-index: -1;
+}
+```
+
+---
