--- a/📔Notes/3. CSS Notes.md
+++ b/📔Notes/3. CSS Notes.md
@@ -25,6 +25,14 @@
 
 ---
 
+## Frameworks
+
+- **[Bootstrap](https://getbootstrap.com/docs/5.3/getting-started/introduction/)**
+
+- 
+
+---
+
 ## How to Use CSS?
 We can apply **CSS** to **HTML Docs** in **3 different ways**.
 
@@ -215,7 +223,7 @@ p {
 - When precise color matching isn't needed
 
 ### 2. **[[Hexadecimal]] Colors**
-**Hex codes** represent colors using hexadecimal values (base-16). They begin with `#` and contain either **3** or **6** digits:
+**Hex codes** represent colors using [[hexadecimal]] values (base-16). They begin with `#` and contain either **3** or **6** digits:
 
 #### ✅ Syntax:
 
@@ -315,6 +323,78 @@ selector {
 - `opacity` affects the entire element **and all of its children**.
 
 - If you want only the background or a specific part to be transparent (not the text inside, for example), use `rgba()` for color instead.
+
+## [Color Theory](https://www.canva.com/colors/color-wheel/)
+Color theory in CSS refers to the principles of combining colors in web design using CSS, based on human visual perception and design best practices. Here’s a practical breakdown tailored to CSS:
+
+### 1. **The Color Wheel in Web Design**
+
+- **Primary Colors:** Red, Blue, Yellow
+
+- **Secondary Colors:** Green, Orange, Purple
+
+- **Tertiary Colors:** Mix of primary and secondary (e.g., red-orange)
+
+### **2. Color Schemes with CSS**
+Use these for harmony and contrast:
+
+| Scheme                  | Description                                          | CSS Tip              |
+| ----------------------- | ---------------------------------------------------- | -------------------- |
+| **Complementary**       | Colors opposite on the wheel (e.g., blue & orange)   | Contrast for buttons |
+| **Analogous**           | Colors next to each other (e.g., blue, teal, green)  | Smooth gradients     |
+| **Triadic**             | Three evenly spaced colors (e.g., red, blue, yellow) | Vibrant interfaces   |
+| **Monochromatic**       | Variations of a single hue                           | Minimalist UI        |
+| **Split-Complementary** | A base + two adjacent to its complement              | Balanced contrast    |
+
+### 3. **CSS Functions for Color Manipulation**
+
+Use modern CSS to create dynamic and accessible designs:
+
+- **`hsl()`**: Easier to adjust lightness/saturation
+
+- **`color-mix()`**: Mix two colors (new CSS Color Module Level 5)
+
+```css
+color: color-mix(in srgb, red 50%, blue 50%);
+```
+
+- **`opacity` & `rgba()`**: For transparency
+
+```css
+background: rgba(0, 0, 0, 0.5);
+```
+
+### 4. **Accessibility & Contrast**
+Use tools or CSS to ensure sufficient contrast between text and background.
+[[Web Content Accessibility Guidelines|WCAG]] recommends a contrast ratio of **4.5:1** for normal text.
+
+### 5. **CSS Custom Properties (Variables) for Colors**
+
+```css
+:root {
+  --primary: hsl(220, 90%, 56%);
+  --primary-light: hsl(220, 90%, 70%);
+  --primary-dark: hsl(220, 90%, 40%);
+}
+.button {
+  background: var(--primary);
+  color: white;
+}
+```
+
+---
+
+### 6. **Useful Tools & Resources**
+
+- [Coolors.co](https://coolors.co/)
+
+- [Color Hunt](https://colorhunt.co/)
+
+- [CSS Gradient](https://cssgradient.io/)
+
+- [Adobe Color](https://color.adobe.com/)
+
+- [contrast-checker tools](https://webaim.org/resources/contrastchecker/)
 
 ---
 
@@ -1685,5 +1765,134 @@ Even without setting `z-index`, elements still stack by **source order**:
     z-index: -1;
 }
 ```
+
+---
+
+## Typography & Icons in CSS
+Typography and icons are fundamental elements of web design and user interface (UI), and CSS gives you powerful tools to style and manage both. Here’s a practical and modern guide for using **typography and icons in CSS**:
+
+### Typography in CSS
+
+#### 1. **Font Families**
+
+```css
+body {
+  font-family: 'Inter', sans-serif;
+}
+```
+
+- Common families: `serif`, `sans-serif`, `monospace`, `cursive`
+
+- Use [Google Fonts](https://fonts.google.com/) for modern, web-safe fonts.
+
+#### 2. **Font Properties**
+
+```css
+p {
+  font-size: 1rem;          /* Responsive unit */
+  font-weight: 400;         /* 100 (thin) to 900 (bold) */
+  line-height: 1.5;         /* Improves readability */
+  letter-spacing: 0.02em;   /* Adjust character spacing */
+  text-align: justify;
+}
+```
+
+#### 3. **Responsive Typography**
+
+Use relative units instead of fixed pixels:
+
+- `em`: Relative to parent
+
+- `rem`: Relative to root (`html`)
+
+```css
+html {
+  font-size: 16px; /* 1rem = 16px */
+}
+h1 {
+  font-size: 2.5rem; /* 40px */
+}
+```
+
+#### 4. **Font Smoothing (for better rendering)**
+
+```css
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+```
+
+
+### Icons in CSS
+
+#### 1. **Using Icon Fonts (e.g., Font Awesome)**
+
+```html
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+```
+
+```html
+<i class="fas fa-home"></i>
+```
+
+```css
+i {
+  font-size: 1.5rem;
+  color: #333;
+}
+```
+
+#### 2. **SVG Icons (Preferred for Scalability & Styling)**
+
+```html
+<svg class="icon" viewBox="0 0 24 24">
+  <path d="M3 12h18"></path>
+</svg>
+```
+
+```css
+.icon {
+  width: 24px;
+  height: 24px;
+  stroke: black;
+  fill: none;
+  stroke-width: 2;
+}
+```
+
+You can also inline or embed SVGs as `background-image`:
+
+```css
+.icon {
+  background-image: url('icon.svg');
+  background-size: contain;
+  width: 32px;
+  height: 32px;
+}
+```
+
+#### 3. **CSS Masking (Advanced SVG Control)**
+
+```css
+.icon {
+  mask: url('icon.svg') no-repeat center;
+  background-color: black;
+}
+```
+
+### 4. **Icon Libraries**
+
+- **Font-Based:** [Google Icons](https://fonts.google.com/icons), [Font Awesome](https://fontawesome.com/icons), [Bootstrap Icons](https://icons.getbootstrap.com/)
+
+- **SVG-Based:** [Heroicons](https://heroicons.com/), [Feather](https://feathericons.com/), [Lucide](https://lucide.dev/)
+
+## 🔧 Best Practices
+
+- Pair typography with matching icon style (e.g., sharp text + sharp icons)
+
+- Use `aria-label` or `title` for accessible icons
+
+- Keep icon size and line height aligned with text for visual rhythm
 
 ---
